--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Daniel Eugene Botha (HashLips)",
   "license": "MIT",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start"
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build"
   },
   "browserslist": {
